--- a/Stanford_CS20/assignments/01/q2.ipynb
+++ b/Stanford_CS20/assignments/01/q2.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/envs/tensorflow/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" Starter code for simple logistic regression model for MNIST\n",
     "with tf.data module\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -124,9 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-7-3919919cf149>:3: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 5: define loss function\n",
     "# use cross entropy of softmax of logits as the loss function\n",
@@ -136,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -149,55 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average loss epoch 0: 0.36531694326982944\n",
-      "Average loss epoch 1: 0.29406534405641777\n",
-      "Average loss epoch 2: 0.28457332846037175\n",
-      "Average loss epoch 3: 0.2770000664300697\n",
-      "Average loss epoch 4: 0.2728619161040284\n",
-      "Average loss epoch 5: 0.26884286064048146\n",
-      "Average loss epoch 6: 0.26881932872672415\n",
-      "Average loss epoch 7: 0.2657645623697791\n",
-      "Average loss epoch 8: 0.26528660888935246\n",
-      "Average loss epoch 9: 0.2621718531604423\n",
-      "Average loss epoch 10: 0.25918197890007216\n",
-      "Average loss epoch 11: 0.26090369461927304\n",
-      "Average loss epoch 12: 0.26143524008261604\n",
-      "Average loss epoch 13: 0.2573699506909348\n",
-      "Average loss epoch 14: 0.25695841497806615\n",
-      "Average loss epoch 15: 0.2583530404193457\n",
-      "Average loss epoch 16: 0.2602421569789565\n",
-      "Average loss epoch 17: 0.2572257059084815\n",
-      "Average loss epoch 18: 0.2547297618590122\n",
-      "Average loss epoch 19: 0.2532716621666454\n",
-      "Average loss epoch 20: 0.2558633285639591\n",
-      "Average loss epoch 21: 0.2534089879067831\n",
-      "Average loss epoch 22: 0.25364196368081626\n",
-      "Average loss epoch 23: 0.25149525521799576\n",
-      "Average loss epoch 24: 0.24853686371514963\n",
-      "Average loss epoch 25: 0.2543459307489007\n",
-      "Average loss epoch 26: 0.25590149295884507\n",
-      "Average loss epoch 27: 0.2503091467847658\n",
-      "Average loss epoch 28: 0.24982969436881153\n",
-      "Average loss epoch 29: 0.25055207043539646\n",
-      "Total time: 19.577154874801636 seconds\n",
-      "Accuracy 0.9171\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 7: calculate accuracy with test set\n",
     "preds = tf.nn.softmax(logits)\n",
     "correct_preds = tf.equal(tf.argmax(preds, 1), tf.argmax(label, 1))\n",
     "accuracy = tf.reduce_sum(tf.cast(correct_preds, tf.float32))\n",
     "\n",
-    "writer = tf.summary.FileWriter('./graphs/logreg', tf.get_default_graph())\n",
+    "saver = tf.train.Saver()\n",
+    "writer = tf.summary.FileWriter('./graphs/logreg/', tf.get_default_graph())\n",
     "with tf.Session() as sess:\n",
     "   \n",
     "    start_time = time.time()\n",
@@ -229,8 +215,18 @@
     "        pass\n",
     "\n",
     "    print('Accuracy {0}'.format(total_correct_preds / n_test))\n",
+    "    saver.save(sess, './graphs/logreg/model.ckpt')\n",
     "writer.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
