--- a/Stanford_CS224n/homework/a1/exploring_word_vectors.ipynb
+++ b/Stanford_CS224n/homework/a1/exploring_word_vectors.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "The rows (or columns) of this matrix provide one type of word vectors (those based on word-word co-occurrence), but the vectors will be large in general (linear in the number of distinct words in a corpus). Thus, our next step is to run *dimensionality reduction*. In particular, we will run *SVD (Singular Value Decomposition)*, which is a kind of generalized *PCA (Principal Components Analysis)* to select the top $k$ principal components. Here's a visualization of dimensionality reduction with SVD. In this picture our co-occurrence matrix is $A$ with $n$ rows corresponding to $n$ words. We obtain a full matrix decomposition, with the singular values ordered in the diagonal $S$ matrix, and our new, shorter length-$k$ word vectors in $U_k$.\n",
     "\n",
-    "![Picture of an SVD](imgs/svd.png \"SVD\")\n",
+    "![Picture of an SVD](./imgs/svd.png \"SVD\")\n",
     "\n",
     "This reduced-dimensionality co-occurrence representation preserves semantic relationships between words, e.g. *doctor* and *hospital* will be closer than *doctor* and *dog*. \n",
     "\n",
@@ -701,7 +701,7 @@
    "source": [
     "<font color=red>**Test Plot Solution**</font>\n",
     "<br>\n",
-    "<img src=\"imgs/test_plot.png\" width=40% style=\"float: left;\"> </img>\n"
+    "<img src=\"./imgs/test_plot.png\" width=40% style=\"float: left;\"> </img>\n"
    ]
   },
   {
@@ -915,7 +915,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -951,7 +953,7 @@
     "\n",
     "We can think of n-dimensional vectors as points in n-dimensional space. If we take this perspective L1 and L2 Distances help quantify the amount of space \"we must travel\" to get between these two points. Another approach is to examine the angle between two vectors. From trigonometry we know that:\n",
     "\n",
-    "<img src=\"imgs/inner_product.png\" width=20% style=\"float: center;\"></img>\n",
+    "<img src=\"./imgs/inner_product.png\" width=20% style=\"float: center;\"></img>\n",
     "\n",
     "Instead of computing the actual angle, we can leave the similarity in terms of $similarity = cos(\\Theta)$. Formally the [Cosine Similarity](https://en.wikipedia.org/wiki/Cosine_similarity) $s$ between two vectors $p$ and $q$ is defined as:\n",
     "\n",
